Fixed jumping of button in navbar

--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -1,6 +1,6 @@
 .navbar {
   width: 100%;
-
+  overflow: hidden;
   &-blue {
     background: $blue;
 
@@ -47,7 +47,8 @@
 
   &-profile {
     .avatar, .name, .btn {
-      float: left;
+      display: inline-block;
+      vertical-align: middle;
     }
 
     .avatar {
